# bw8

./: .gitignore  Cargo.toml  readme.md
arch/: Cargo.toml
arch/src/: bus.rs  cpu.rs  lib.rs  trace.rs
arch/src/cpu/: instruction.rs  register.rs
asm/: Cargo.toml  asm_gen.py  bw8.asm  emu.asm  hello_world.asm  irq_hello_world.asm  vga_test.asm
asm/src/: main.rs
emu/: Cargo.toml
emu/src/: emu.rs  main.rs
emu/src/emu/: bus.rs  uart.rs  vga.rs
isa/src/: instruction.rs  lib.rs  opcode.rs
uarch/: Cargo.toml
uarch/src/: lib.rs
uasm/: Cargo.toml
uasm/src/: main.rs
